# MLE-Estimator

./: README.md  mle_gof_demo.ipynb  pyproject.toml  requirements.txt
mle_estimator/: estimator.py
